pkg/safeguards/lib/v2.0.0/container-no-latest-image/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureV1ContainerNoLatestImage
metadata:
  name: v1-container-no-latest-image
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "ReplicationController", "ReplicaSet"]
